<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#04196A"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_a_class"
            android:textAlignment="center"
            android:textColor="#B6A720"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEnterTName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="44dp"
            android:text="@string/enter_teacher_s_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHeading" />

        <EditText
            android:id="@+id/edtTName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="@dimen/_20sp"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintLeft_toRightOf="@+id/txtEnterTName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHeading"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtChooseImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="75dp"
            android:text="@string/choose_an_image"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEnterTName" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgTeacher"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="24dp"
            android:background="@color/darkGray"
            android:src="@drawable/baseline_person_24"
            app:layout_constraintCircleRadius="16dp"
            app:layout_constraintHorizontal_bias="0.904"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTName"
            app:shapeAppearanceOverlay="@style/circular"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/txtEnterDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="82dp"
            android:text="@string/pick_a_date"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtChooseImg" />

        <TextView
            android:id="@+id/txtDatePicker"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:hint="@string/Date"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toRightOf="@+id/txtEnterDate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgTeacher"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtAddComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/additional_comments"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEnterDate" />

        <EditText
            android:id="@+id/edtAddComments"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:hint="@string/additional_comments"
            android:inputType="textMultiLine"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintLeft_toRightOf="@+id/txtAddComments"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDatePicker"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextFields" />

        <Button
            android:id="@+id/btnClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/add"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAddComments" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/imgTeacher"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imgTeacher"
            app:layout_constraintTop_toTopOf="@+id/imgTeacher"
            app:maxImageSize="@dimen/_16sp"
            app:shapeAppearanceOverlay="@style/circular"
            app:srcCompat="@drawable/baseline_photo_camera_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
