<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F6A7A7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgTeacher"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_person_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circular"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/txtTeacherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:text="@string/teacher_name"
                android:textSize="@dimen/_20sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgTeacher"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="15dp"
                android:text="@string/Date"
                android:textSize="@dimen/_20sp"
                app:layout_constraintLeft_toRightOf="@+id/imgTeacher"
                app:layout_constraintTop_toBottomOf="@+id/txtTeacherName"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/name"
                android:textSize="@dimen/_20sp"
                app:layout_constraintHorizontal_bias="0.549"
                app:layout_constraintLeft_toRightOf="@+id/txtTeacherName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtDisplayDate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/date"
                android:textSize="@dimen/_20sp"
                app:layout_constraintHorizontal_bias="0.815"
                app:layout_constraintLeft_toRightOf="@+id/txtDate"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtName"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtAdditionalComments"
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/additional_comments"
                android:textSize="@dimen/_20sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgTeacher"
                app:layout_constraintTop_toBottomOf="@+id/txtDisplayDate"
                tools:ignore="TextSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>